Fixed heading spacing

--- a/src/app/all-cards/all-cards.component.css
+++ b/src/app/all-cards/all-cards.component.css
@@ -79,7 +79,7 @@ cursor: pointer;
   margin-top: 9%;
   max-width: 400px;
   padding-bottom: 30px;
-  margin-left:35%;
+  margin-left:32%;
 }
 
 
